# CryptoBot

./: .gitignore  makefile  pyproject.toml
BotFin/: CryptoAsync.py  GreedFearAsync.py  MainAsync.py  ModelLSTM.pt  PriceLSTM.py  Scraper-CoinTele.py  Scraper-Reddit.py  Scraper_Async.py  Scraper_Reddit.py  nlpFinalModel (1).pt  trainedModel.pt
Models/: CryptoLSTM.ipynb  CryptoNLP.ipynb
