[tool.poetry]
name = "Bot crypto"
version = "0.1.0"
description = "Bot analisador de dados crypto"
authors = ["Raveme491 <michaelsdf491@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
